Fix adaptive for table on mobile

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -23,3 +23,10 @@
     cursor: default;
   }
 }
+
+@media screen and (max-width: $tablet) {
+  .Button {
+    font-size: 0.8rem;
+    padding: 0.5rem 0.9rem;
+  }
+}
