--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -73,15 +73,17 @@
   .Card {
     width: 14rem;
     height: 22rem;
-    margin: 0.5em 1em;
+    margin: 0.5em 0.5em;
+  }
+
+  .English {
+    font-size: 1.5rem;
   }
 }
 
 @media screen and (max-width: $smallMobile) {
   .Card {
     width: 10rem;
-    height: 22rem;
-    margin: 0.5em 0.6em;
     border-radius: 50px;
   }
 }
